[package]
name = "jsint_roguewasm"
version = "0.1.0"
authors = ["Aaron McLeod <aaron.g.mcleod@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
wasm-bindgen = { version = "=0.2.29", features = ["serde-serialize"] }
js-sys = "=0.3.6"
